<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="vid35.dev.barbergangbooking.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_acercade"
        android:name="vid35.dev.barbergangbooking.ui.acercade.AcercaDeFragment"
        android:label="@string/menu_acercade"
        tools:layout="@layout/fragment_acercade" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="vid35.dev.barbergangbooking.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />
</navigation>