<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_booking_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/nav_header_title"
        app:srcCompat="@drawable/barbergangsplashlogo_9" />

    <LinearLayout
        android:id="@+id/layout_user_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_booking_logo"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_alias_booking"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_alias"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_alias_booking"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/txt_alias"
                android:autofillHints="alias" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_nombre_booking"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nombre"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_nombre_booking"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:autofillHints="nombre"
                android:inputType="textPersonName"
                android:hint="@string/txt_nombre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_apellido_booking"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_apellido"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_apellido_booking"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:autofillHints="apellido"
                android:inputType="textPersonName"
                android:hint="@string/txt_apellido" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/division_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_user_data"
        android:layout_marginVertical="5dp"
        android:background="@android:color/background_dark" />

    <TextView
        android:id="@+id/text_cita_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/division_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/text_titulo_resumen"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_booking_tldr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_cita_titulo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_booking_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_baseline_event_note_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_booking_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_cita_titulo"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_booking_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_booking_icon"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_booking_user_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmar_cita"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_confirmar" />

</RelativeLayout>