<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#222222"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <TextView
        android:id="@+id/text_booking_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_titulo_booking"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_below="@id/text_booking_titulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_button" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_regresar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_regresar" />

        <Button
            android:id="@+id/btn_siguiente"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_siguiente" />


    </LinearLayout>
</RelativeLayout>